--- a/lang/en.yml
+++ b/lang/en.yml
@@ -1,7 +1,7 @@
 en:
-  Blog:
+  SilverStripe\Blog\Model\Blog:
     DESCRIPTION: 'Adds a Blog or News section to your website.'
-  BlogPost:
+  SilverStripe\Blog\Model\BlogPost:
     SUMMARY_DESCRIPTION: "If no summary is specified then an excerpt from the article content will be used."
     FEATURED_IMAGE_DESCRIPTION: "If no image is supplied then the first image found in the article content will be used if one exists."
     DESCRIPTION: 'An individual Blog or News post.'
